--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "neat": "~1.6.0",
     "normalize-css": "~3.0.1",
     "backbone": "~1.1.2",
-    "handlebars": "~1.3.0"
+    "handlebars": "~1.3.0",
+    "octicons": "*"
   }
 }
